--- a/page/component/cart/cart.wxml
+++ b/page/component/cart/cart.wxml
@@ -14,6 +14,7 @@
                 </view>
                 <text class="cart-del" bindtap="deleteList" data-index="{{index}}">×</text>
             </view>
+            <button type="warn" bindtap="clearCate" class="clear-cate"> 清空购物车 </button>
         </view>
 
         <view class="cart-footer">
