--- a/page/component/details/details.wxml
+++ b/page/component/details/details.wxml
@@ -5,11 +5,12 @@
         <navigator open-type="switchTab" url="../cart/cart">
             <view class="carts-icon {{scaleCart?'on':''}}">
                 <image src="/image/cart2.png"></image>
-                <text class="carts-icon-num" wx:if="{{hasCarts}}">{{totalNum}}</text>
+                <text class="carts-icon-num" wx:if="{{totalNum>0}}">{{totalNum}}</text>
             </view>
         </navigator>
         
         <view class="goods-operation">
+            <text class="goods-operation-add" bindtap="reduceCount">-</text>
             <text class="goods-operation-num">数量  {{num}}</text>
             <text class="goods-operation-add" bindtap="addCount">+</text>
             <text class="goods-to-cart" bindtap="addToCart">加入购物车</text>
